--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.19.4",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.0"
