--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy Full Stack App
+name: 🚀 Deploy HRMS (Frontend + Flask Backend)
 
 on:
   push:
@@ -6,11 +6,11 @@ on:
       - main
 
 jobs:
-  # --------------------------
-  # 1️⃣ FRONTEND DEPLOY JOB
-  # --------------------------
+  # ---------------------------
+  # 1️⃣ FRONTEND DEPLOYMENT
+  # ---------------------------
   frontend-deploy:
-    name: Deploy Frontend
+    name: Frontend Deployment
     runs-on: ubuntu-latest
 
     steps:
@@ -29,21 +29,21 @@ jobs:
             git pull origin main
             npm install
             npm run build
-            echo "✅ Frontend deployed successfully."
+            echo "✅ Frontend build complete."
 
-  # --------------------------
-  # 2️⃣ BACKEND DEPLOY JOB
-  # --------------------------
+  # ---------------------------
+  # 2️⃣ BACKEND DEPLOYMENT
+  # ---------------------------
   backend-deploy:
-    name: Deploy Backend
+    name: Flask Backend Deployment
     runs-on: ubuntu-latest
-    needs: frontend-deploy   # ✅ This makes backend run only AFTER frontend succeeds
+    needs: frontend-deploy    # runs after frontend completes
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy Backend via SSH
+      - name: Deploy Flask Backend via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
@@ -53,7 +53,22 @@ jobs:
             echo "🧠 Pulling latest backend code..."
             cd /home/ubuntu/HRMS/backend
             git pull origin main
+
+            echo "🐍 Activating virtual environment..."
+            if [ ! -d "venv" ]; then
+              python3 -m venv venv
+            fi
+            source venv/bin/activate
+
+            echo "📦 Installing dependencies..."
             pip install -r requirements.txt
-            echo "🔁 Restarting backend service..."
-            pm2 restart hrms-backend || pm2 start app.py --name hrms-backend
-            echo "✅ Backend deployed successfully."
+
+            echo "🔁 Restarting Flask app..."
+            python3 app.py
+            # If you're using Gunicorn + systemd
+            # sudo systemctl restart hrms-backend.service || echo "⚠️ Service not found, starting manually..."
+            
+            # Optional fallback — start Flask manually if not using systemd
+            # nohup venv/bin/python app.py > app.log 2>&1 &
+
+            echo "✅ Flask backend deployed successfully."
