--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-#Test 6
+#Test 7
 name: 🚀 Deploy HRMS (Frontend + Flask Backend)
 
 on:
@@ -23,7 +23,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             echo "🎨 Pulling latest frontend code..."
             cd /home/ubuntu/HRMS/frontend
@@ -49,7 +49,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             echo "🧠 Pulling latest backend code..."
             cd /home/ubuntu/HRMS/backend
