--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
